<resources>
    <string name="app_name">Ibet</string>
    <string name="add_more">Add More Teams</string>
    <string name="facebook_app_id">1659174971066280</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_as_guest">Login as a guest</string>
    <string name="chart_highest">Highest Rank</string>
    <string name="chart_richest">Richest Rank</string>
    <string name="sendbutton">Send</string>
    <string name="purchase_button">Purchase</string>
    <string name="dont_have_an_account_register">Dont have an Account? Register</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="theme">Choose Theme Color</string>
    <string name="choose_background">Choose Background Color</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="fan">Fans</string>
    <string name="beginner">Beginner</string>
    <string name="start_new_bet">Start New Bet</string>
    <string name="participants">Participants</string>
    <string name="posts">Posts</string>
    <string name="join">Join</string>
    <string name="country">COUNTRY</string>
    <string name="best_ammount">Bet amount</string>
    <string name="player">Player</string>
    <string name="result">Result</string>
    <string name="team">Team</string>
    <string name="score">Score</string>
    <string name="loser_will_have_to">Loser will have to</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chart">Charts</string>
    <string name="highestrank">Highest Ranked User</string>
    <string name="all">All</string>
    <string name="All_notification_heading">Select all notification</string>
    <string name="editpic">Change profile picture</string>
    <string name="friends">Friends</string>
    <string name="richestuser">Richest Users</string>
    <string name="store">Store</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="teamnotification">Team Notification</string>
    <string name="generalnotification">General Notification</string>
    <string name="sounds">Sounds</string>
    <string name="themes">Themes</string>
    <string name="odds">Odds</string>
    <string name="info">Info</string>
    <string name="removeads">Remove Ads</string>
    <string name="feedback">Feedback</string>
    <string name="tutorial">Tutorial</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="bets_to_join">Bets to Join</string>
    <string name="finished_bet">Finished Bets</string>
    <string name="coin">Coins</string>
    <string name="germany_vs_italy">Germany vs Italy</string>
    <string name="highets_friend">Ricky</string>
    <string name="feedback_email_hint">Enter Your Mail Id</string>
    <string name="highets_rank">Rank 42</string>
    <string name="select_favourite_team">Select Favourite Team</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="rateus">Rate Us</string>
    <string name="bonus">Scratch Bonus</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_chart_tab">ChartTabActivity</string>
    <string name="title_activity_soundlist">SoundlistActivity</string>
    <string name="purchase_heading">Purchase more virtual money!</string>
    <string name="title_activity_richest_rank">RichestRankActivity</string>
    <string name="title_activity_odds">OddsActivity</string>
    <string name="teamnotification_heading">Which team would you like to get notification</string>
    <string name="muteallnotification">Mute all notifications</string>
    <string name="enter_bet_arena">Enter Bet Arena</string>
    <string name="events">Events</string>
    <string name="stats">Stats</string>
    <string name="stand">Stand</string>
    <string name="top">Top</string>
    <string name="create_bet">Create Bet</string>
    <string name="got_it">Got it</string>
    <string name="dailog_text">You Got 100 Coins</string>
    <string name="congratulation_txt">Congratulation</string>
    <string name="create_bet_txt">If all checkboxes are off. By default all users can view and join the bet</string>
    <string name="title_activity_scratch">ScratchActivity</string>
    <string name="lorem">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="shareit">Share it with</string>
    <string name="appkey">12334ddfdfdf</string>
    <string name="url">https://netforcesales.com/ibet_admin/api</string>
    <string name="urlsearch">https://netforcesales.com/ibet_admin/api/search_team.php</string>
    <string name="legal_info">"All images and/or logos shown or represented in this game are protected by copyright and/or are trademarks of their respective corporations. The use of low resolution images and/or logos in this App for the use of identification in a positive and informational context qualifies as 'fair use' under copyright law. Any other usage of these images elsewhere may be copyright infringement."</string>
    <string name="slide_input_title">Slide: Input Demo</string>
    <string name="slide_input_description">This slide demonstrates how input is saved over orientation and slide changes.</string>
    <string name="slide_input_edittext">Type something here.</string>
    <string name="slide_input_checkbox">Check something</string>
    <string name="shareitwith">Share it with</string>
    <string name="login_message">In order to enjoy all app features, Please login with facebook</string>
    <string name="login">Login</string>
    <string name="choose_app_bg_msg">Choose a background for application</string>
    <string name="highest_rank">Highest Rank</string>
    <string name="rishest_rank">Richest Rank</string>
    <string name="invite_friends_to_bet">Invite friends to Bet</string>
    <string name="friends1">Friends:</string>
    <string name="other_user_s_can_view_the_bet_and_join">Other user/s can view the bet and join</string>
    <string name="other_user_s_can_only_view_without_join">Other user/s can only View without join</string>
    <string name="no_one_can_view_the_bet_accept_the_invited_users">No one can view the bet accept the invited users.</string>
    <string name="_200_characters_remaining">200 characters remaining</string>
    <string name="match_starts_in">Match starts in</string>
    <string name="winnings">WINNINGS</string>
    <string name="level">LEVEL</string>
    <string name="losses_cap">LOSSES</string>
    <string name="set_your_favourite_team">Set your Favourite Team</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="scratch_to_find_three_of_a_kind">Scratch to find three of a kind</string>
    <string name="collect_your_price">Collect your price</string>
    <string name="come_back_in">Come back in:</string>
    <string name="buy_another_for_20_coins">Buy another for 20 coins</string>
    <string name="collect_your_prize">Collect Your Prize</string>
    <string name="no_user_found">No user found</string>
    <string name="selected_teams">selected teams</string>
    <string name="all_teams">All teams</string>
    <string name="add_team">Add Team</string>
    <string name="welcome_to_the_arena">Welcome to the Arena</string>
    <string name="well_no_message_yet">No message yet</string>
    <string name="well_be_the_first_to_start_it">Well, be the first to start it</string>
    <string name="default_intro">Default Intro</string>
    <string name="choose_who_will_win">Choose who will win</string>
    <string name="win">WIN</string>
    <string name="draw">Draw</string>
    <string name="or_by_score">Or By Score</string>
    <string name="participants_can_join_on_any_result">Participants can join on any result</string>
    <string name="set_bet_ammount">Set Bet Amount</string>
    <string name="ok">OK</string>
    <string name="take_picture">Take Picture</string>
    <string name="pick_from_galary">Pick from galary</string>
    <string name="loading">Loading...</string>
    <string name="type_here">Type here</string>
    <string name="in_order_to_enjoy_all_app_features_please_login_with_facebook">In order to enjoy all app features, Please login with facebook</string>
    <string name="data_not_available">Data not available</string>
    <string name="error">Error</string>
    <string name="live_match">Live Match</string>
    <string name="select_date">Select Date</string>
    <string name="no_matches_available">NO MATCHES AVAILABLE</string>
    <string name="place_bet">Place Bet</string>
    <string name="welcome_to_the_stand">Welcome to the stand</string>
    <string name="choose_your_side">Choose your side</string>
    <string name="or_take_no_side">Or take no side</string>
    <string name="i_m_neutral">I\'m neutral</string>
    <string name="total_shots">Total Shots</string>
    <string name="shots_on_target">Shots On Target</string>
    <string name="fouls">Fouls</string>
    <string name="cornors">Cornors</string>
    <string name="off_side">Off side</string>
    <string name="possesion">Possesion</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="saves">Saves</string>
    <string name="no_stats_available">No Stats available</string>
    <string name="rank">Rank</string>
    <string name="gp">GP</string>
    <string name="pts">pts</string>
    <string name="no_data_available">No Data Available</string>
    <string name="fans">Fans</string>
    <string name="welcome_to_stand">Welcome to Stand</string>
    <string name="italy">Italy</string>
    <string name="germany">Germany</string>
    <string name="view_detail">View Detail</string>
    <string name="vs">Vs</string>
    <string name="you_lost">You Lost</string>
    <string name="bag">Bag</string>
    <string name="please_wait">Please wait for a moment...</string>
    <string name="progress_dialog">Please Wait</string>
    <string name="pick_a_bet"><b>Pick a booker</b></string>
    <string name="bet_not_placed">could not place bet</string>
    <string name="bet_has_been_placed">Bet has been placed !</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_odds">No odds for this match</string>
    <string name="no_bets_to_join">No bets to join</string>
    <string name="predict_score">Predict Score</string>
    <string name="bet_amount">Bet Amount</string>
    <string name="feedbackerror">Some error occur while sending feedback</string>
    <string name="server_down">Server is down. Please try again</string>
    <string name="failed_to_upload">Failed to upload</string>
    <string name="no_data">No data</string>
    <string name="about_app">About App</string>
    <string name="small">SMALL</string>
    <string name="pack">Pack</string>
    <string name="large">LARGE</string>
    <string name="medium">MEDIUM</string>
    <string name="spuer">SUPER</string>
    <string name="earn_coins">Earn Coins!!!</string>
    <string name="upto_100k_coins">Upto 100K coins</string>
    <string name="ibet_email">info@zandylabs.com</string>
    <string name="sorry_try_later">Sorry try again later</string>
    <string name="ibet_notification">Ibet Notification</string>
    <string name="you_got_notification">You have got notification</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="feeback">Feedback</string>
</resources>