<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="16dp"
    tools:context="com.netforceinfotech.ibet.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:padding="32dp">

        <Button
            android:id="@+id/buttonGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:drawableLeft="@drawable/ic_guest"
            android:drawablePadding="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="left|center_vertical"
            android:text="@string/login_as_guest"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonCustomFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#4267B2"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawablePadding="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="left|center_vertical"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account_register"
                android:textColor="@color/colorAccent" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent" />

    </LinearLayout>
</RelativeLayout>
