<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transulation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/feedback_email_hint"
                    android:padding="10dp"
                    android:text="@string/purchase_heading"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_marginBottom="16dp"
                    app:mrl_rippleColor="@color/ripple"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/buttonPurchase"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:drawablePadding="16dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/purchase_button"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
