<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.netforceinfotech.ibet.profilesetting.ProfileSettingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:background="@color/colorPrimaryDark"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="100"
                    android:orientation="vertical">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/rippleProPic"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="75"
                        app:mrl_rippleColor="@color/ripple"
                        app:mrl_rippleOverlay="true">

                        <ImageView
                            android:id="@+id/imageViewDP"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/grey"
                            android:padding="16dp"
                            android:src="@drawable/ic_profile_setting" />
                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/rippleText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="25"
                        app:mrl_rippleColor="@color/ripple"
                        app:mrl_rippleOverlay="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorSecondaryText"
                            android:gravity="center"
                            android:text="Choose profile picture"
                            android:textColor="@color/colorText"
                            android:textStyle="bold" />
                    </com.balysv.materialripple.MaterialRippleLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:mrl_rippleColor="@color/ripple"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/buttonFavTeam"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/select_favourite_team"
                        android:textColor="@color/colorText"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:mrl_rippleColor="@color/ripple"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/buttonSkip"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="@string/skip"
                        android:textColor="@color/colorText"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:mrl_rippleColor="@color/ripple"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/buttonDone"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:text="@string/done"
                        android:textColor="@color/colorText"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
